--- a/edu_prepvi_capstone_oreo/CSS/Drinks.css
+++ b/edu_prepvi_capstone_oreo/CSS/Drinks.css
@@ -1,23 +1,105 @@
 body {
     background-color: lightpink;
 }
-.Topnavbar {
+#navbar {
+    overflow: hidden;
+    margin-left: 0px;
+    width: auto;
     background-color:rgba(0, 0, 0, 0.76);
-    padding: 23px 20px;
-    
 }
-.Topnavbar a {
+
+#navbar a {
+    float: left;
     color: chartreuse;
     font-size: 19px;
     font-family: monospace;
     font-style: italic;
-    margin: 25px 20px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
 
+#navbar a:hover,
+#dropdown:hover #dropbtn {
+    background-color: rgba(0, 0, 0, 0.76);
 }
-.Topnavbar a :hover {
-    color: white;
-    padding: 30px 25px;
+@media (max-width:480px){
+    #navbar a{
+        font-size: small;
+        font-weight: 900;
+    }
 }
+
+#dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+#dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#dropdown-content a:hover {
+    background-color: rgba(0, 0, 0, 0.76);
+    color: #f4f4f4ec;
+}
+
+#dropdown:hover #dropdown-content {
+    display: block;
+}
+
+.side-nav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    opacity: 0.9;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+}
+
+.side-nav a {
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.side-nav a:hover {
+    color: rgba(252, 13, 132, 0.76);
+}
+
+.side-nav .btn-close {
+    position: absolute;
+    top: 0;
+    right: 22px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left 0.5s;
+    padding: 20px;
+    overflow: hidden;
+    width: 100%;
+}
+
 
 h1 {
     color: rgb(17, 20, 17);
@@ -58,17 +140,119 @@ h1 {
       color:black;
       font-size: 25px;
   }
+  .bthp a {
+    text-align: right;
+    font-size: 35px;
+    margin-left: 90px;
+}
   footer {
     background-color: greenyellow;
     color: blue;
     font-size: 30px;
     border-radius: 10%;
     text-align: center;
-
 }
-.bthp a {
-    text-align: right;
-    font-size: 45px;
-    margin-left: 90px;
+
+/* cart styling */
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row {
+    display: flex;
+}
+
+.cart-item {
+    width: 45%;
+}
+
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
 }
 
