--- a/edu_prepvi_capstone_oreo/CSS/food.css
+++ b/edu_prepvi_capstone_oreo/CSS/food.css
@@ -3,22 +3,40 @@ body {
     background-color: lightpink;
     
 }
-.Topnavbar {
-    background-color:orange;
-    padding: 23px 20px;
-    
+#navbar {
+    overflow: hidden;
+    margin-left: 0px;
+    width: auto;
+    background-color: orange;
 }
-.Topnavbar a {
-    color: black;
+
+#navbar a {
+    float: left;
     font-size: 19px;
     font-family: monospace;
     font-style: italic;
-    margin: 25px 20px;
-
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
-.Topnavbar a :hover {
-    color: white;
-    padding: 30px 25px;
+
+#navbar a:hover,
+#dropdown:hover #dropbtn {
+    background-color: orange;
+}
+@media (max-width:480px){
+    #navbar a{
+        font-size: small;
+        font-weight: 900;
+    }
+    .welcome {
+        font-size: small;
+        text-align: left;
+    }
+    .bthp a{
+        font-size: 14px;
+    }
 }
 .welcome {
     text-align: center;
@@ -28,6 +46,74 @@ body {
 .welcome h4 {
     font-size: 25px;
     font-style: italic;
+}
+#dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+#dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#dropdown-content a:hover {
+    background-color: orange;
+    color: #f4f4f4ec;
+}
+
+#dropdown:hover #dropdown-content {
+    display: block;
+}
+
+.side-nav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    opacity: 0.9;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+}
+
+.side-nav a {
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.side-nav a:hover {
+    color: orange;
+}
+
+.side-nav .btn-close {
+    position: absolute;
+    top: 0;
+    right: 22px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left 0.5s;
+    padding: 20px;
+    overflow: hidden;
+    width: 100%;
 }
 
 /* Container holding the image and the text */
@@ -70,6 +156,110 @@ body {
 }
 .bthp a {
     text-align: right;
-    font-size: 45px;
+    font-size: 35px;
     margin-left: 90px;
 }
+
+/* cart styling */
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row {
+    display: flex;
+}
+
+.cart-item {
+    width: 45%;
+}
+
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
+}
+
