--- a/edu_prepvi_capstone_oreo/CSS/Drinks.css
+++ b/edu_prepvi_capstone_oreo/CSS/Drinks.css
@@ -5,29 +5,51 @@ body {
     overflow: hidden;
     margin-left: 0px;
     width: auto;
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color:orange;
 }
 
 #navbar a {
     float: left;
-    color: chartreuse;
+    display: block;
+    color: black;
     font-size: 19px;
     font-family: monospace;
     font-style: italic;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
-    
+    text-decoration: none;    
+}
+#navbar input[type="text"]{
+    padding-top: 15px;
+    padding-right: 10px;
+    border: none;
+    font-size: 17px;
 }
 
 #navbar a:hover,
 #dropdown:hover #dropbtn {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: rgba(0, 0, 0, 0.233);
 }
 @media (max-width:480px){
-    #navbar a{
+    #navbar .search-box{
+        float: none;
+     }
+     #navbar input[type="text"]{
+         float: none;
+         display: block;
+         text-align: left;
+         width: 100%;
+         margin: 0;
+         padding: 14px;
+     }
+     .welcome {
         font-size: small;
-        font-weight: 900;
+        text-align: left;
+     }
+     .cart-item-image {
+        width: 25px;
+        height: auto;
+        border-radius: 10px;
     }
 }
 
@@ -140,10 +162,11 @@ h1 {
       color:black;
       font-size: 25px;
   }
-  .bthp a {
-    text-align: right;
-    font-size: 35px;
-    margin-left: 90px;
+  .bthp {
+    display: flex;
+    justify-content: space-between;
+    font-size: 25px;
+    margin-left: 5px;
 }
   footer {
     background-color: greenyellow;
@@ -254,5 +277,17 @@ h1 {
     display: block;
     margin: 40px auto 80px auto;
     font-size: 1.75em;
+    color: white;
+    background-color: #2D9CDB;
+    border: none;
+    border-radius: .3em;
+}
+.btn-purchase:hover{
+    background-color: #1b6ca8;
+}
+.search-box{
+    float: right;
+    padding-top: 15px;
+    padding-right: 10px;
 }
 
