--- a/edu_prepvi_capstone_oreo/CSS/food.css
+++ b/edu_prepvi_capstone_oreo/CSS/food.css
@@ -12,6 +12,7 @@ body {
 
 #navbar a {
     float: left;
+    display: block;
     font-size: 19px;
     font-family: monospace;
     font-style: italic;
@@ -20,23 +21,46 @@ body {
     padding: 14px 16px;
     text-decoration: none;
 }
-
-#navbar a:hover,
-#dropdown:hover #dropbtn {
-    background-color: orange;
+#navbar input[type="text"]{
+    padding-top: 15px;
+    padding-right: 10px;
+    border: none;
+    font-size: 17px;
 }
-@media (max-width:480px){
-    #navbar a{
-        font-size: small;
-        font-weight: 900;
+
+#navbar a:hover, 
+#dropdown:hover #dropbtn{
+    background-color: rgba(0, 0, 0, 0.233);
+}
+ 
+@media screen and (max-width:480px){
+    #navbar .search-box{
+       float: none;
+    }
+    #navbar input[type="text"]{
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
     }
     .welcome {
         font-size: small;
         text-align: left;
     }
     .bthp a{
-        font-size: 14px;
+        font-size: 17px;
     }
+    .cart-total .cart-total-title{
+        text-align: center;
+    }
+    .cart-item-image {
+        width: 25px;
+        height: auto;
+        border-radius: 10px;
+    }
+    
 }
 .welcome {
     text-align: center;
@@ -154,10 +178,11 @@ body {
     text-align: center;
 
 }
-.bthp a {
-    text-align: right;
-    font-size: 35px;
-    margin-left: 90px;
+.bthp {
+    display: flex;
+    justify-content: space-between;
+    font-size: 25px;
+    margin-left: 5px;
 }
 
 /* cart styling */
@@ -261,5 +286,18 @@ body {
     display: block;
     margin: 40px auto 80px auto;
     font-size: 1.75em;
-}
+    color: white;
+    background-color: #2D9CDB;
+    border: none;
+    border-radius: .3em;
 
+}
+.btn-purchase:hover{
+    background-color: #1b6ca8;
+}
+.search-box{
+    float: right;
+    padding-top: 15px;
+    padding-right: 10px;
+    border: none;
+}
